--- a/profiles/dcco/themes/dcco2014/sass/layout/_region--footer.scss
+++ b/profiles/dcco/themes/dcco2014/sass/layout/_region--footer.scss
@@ -6,7 +6,6 @@
 // Footer region
 #footer {
   background-color: transparentize($teal-black, 0.25);
-  margin-top: -6px;
   padding: rhythm(2) 0 rhythm(1);
   text-transform: uppercase;
   width: 100%;
